--- a/my_web/templates/my_web/base.html
+++ b/my_web/templates/my_web/base.html
@@ -101,8 +101,9 @@
             }
 
             .wrapper{
-              max-width: 450px;
+              max-width: 560px;
               margin: 150px auto;
+              transition: margin 1s;
             }
 
             .wrapper .search-input{
