--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -10,6 +10,20 @@
                 <label class="city" style="font-size: calc(14px + (18 - 14) * ( (100vw - 480px) / ( 1024 - 480) ));">
                     {{ advertise.i_text|safe }}
                 </label>
+                <div style="
+                    background: #fff;
+                    border-radius: 0.3em;
+                    font-weight: 600;
+                    font-size: 0.9em;
+                    margin-top: 1em;
+                    display: inline-block;
+                ">
+                    <span style="
+                        margin: 0.3em;
+                    ">Реклама&nbsp;
+                        <i class="fas fa-ad"></i>
+                    </span>
+                </div>
             </div>
         </div>
     </div>
