--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -72,12 +72,26 @@
         <div class="col-12 col-lg-12 padding-block-center-box">
             <div class="user box aos-init aos-animate" data-aos="fade-up">
                 <div style="float: left;">
-                    <label class="username">Калькулятор</label><br>
                     <label class="city">
                         <i>
                             {{ c_input }}&nbsp;=&nbsp;{{ c_result }}
                         </i>
                     </label>
+                    <br/>
+                    <div style="
+                        background: #fff;
+                        border-radius: 0.5em;
+                        font-weight: 600;
+                        font-size: 0.9em;
+                        margin-top: 1em;
+                        display: inline-block;
+                    ">
+                        <span style="
+                            margin: 0.5em;
+                        ">Калькулятор&nbsp;
+                            <i class="fas fa-calculator"></i>
+                        </span>
+                    </div>
                 </div>
             </div>
         </div>
@@ -86,7 +100,6 @@
         <div class="col-12 col-lg-12 padding-block-center-box">
             <div class="user box aos-init aos-animate" data-aos="fade-up">
                 <div style="float: left;">
-                    <label class="username">Переводчик</label><br>
                     <label class="city">
                         <i>
                             {{ search }}
@@ -95,8 +108,22 @@
                         <b>
                             {{ translate_result }}
                         </b>
-                        <br/><br/>
                     </label>
+                    <br/>
+                    <div style="
+                        background: #fff;
+                        border-radius: 0.5em;
+                        font-weight: 600;
+                        font-size: 0.9em;
+                        margin-top: 1em;
+                        display: inline-block;
+                    ">
+                        <span style="
+                            margin: 0.5em;
+                        ">Переводчик&nbsp;
+                            <i class="fas fa-language"></i>
+                        </span>
+                    </div>
                 </div>
             </div>
         </div>
