--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -74,7 +74,7 @@
                 <div style="float: left;">
                     <label class="city">
                         <i>
-                            {{ c_input }}&nbsp;=&nbsp;{{ c_result }}
+                            {{ c_input }}&nbsp;=&nbsp;<b style="text-decoration: underline;">{{ c_result }}</b>
                         </i>
                     </label>
                     <br/>
