--- a/my_web/templates/my_web/index.html
+++ b/my_web/templates/my_web/index.html
@@ -72,7 +72,7 @@ AWARE
         <div class="row-posts-end-ad">
             <!-- Reserved block -->
         </div>
-        <div class="row-posts-end" style="visibility: hidden;">
+        <div class="row-posts-end" style="visibility: hidden;transition: margin-top 1s;margin-top: 0em;">
             {% if advertise %}
                 <div class="col-12 col-lg-12 padding-block-center-box">
                     <div class="user box aos-init aos-animate" data-aos="fade-up">
