--- a/my_web/templates/my_web/index.html
+++ b/my_web/templates/my_web/index.html
@@ -26,8 +26,8 @@ AWARE
         <div class="advertise-aware-block">
             <!-- Outdated/Disabled now block -->
         </div>
-        <div class="search-aware-block-global">
-            <div class="wrapper" style="margin-bottom: 5%;">
+        <div class="search-aware-block-global" style="margin-bottom: -8em;">
+            <div class="wrapper">
                 <div class="search-input" style="z-index: 106;">
                     <a href="" target="_blank" hidden></a>
                     <input type="text" maxlength="800" class="search-input-aware" size="100" style="transition: padding 0.5s;" placeholder="{{ search_template }}">
