--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -182,7 +182,7 @@
                             <div class="col-xs-12">
                                 <ul class="list-inline row forecast">
                                     <li id="{{ 24|get_random_string }}" style="border-top: 1px solid #fff;" class="col-xs-4 col-sm-2 text-center">
-                                        <h3 class="h5">{% now "D" %}</h3>
+                                        <h3 class="h5">{% now "D, j E" %}</h3>
                                         <p>
                                             {{ weather.now_weather.weather.0.icon|get_weather_ico|safe }}
                                             <br>
@@ -191,7 +191,7 @@
                                     </li>
                                     {% for weather_el in weather.future_weather %}
                                         <li id="{{ 24|get_random_string }}" style="border-top: 1px solid #fff;" class="col-xs-4 col-sm-2 text-center">
-                                            <h3 class="h5">{{ forloop.counter|add_days_by_timestamp|date:"D" }}</h3>
+                                            <h3 class="h5">{{ forloop.counter|add_days_by_timestamp|date:"D, j E" }}</h3>
                                             <p>
                                                 {{ weather_el.weather.0.icon|get_weather_ico|safe }}
                                                 <br>
