--- a/my_web/templates/my_web/index.html
+++ b/my_web/templates/my_web/index.html
@@ -23,8 +23,8 @@ AWARE
 {% block content %}
 {% load static %}
     <div style="display: block;margin-left: auto;margin-right: auto;border-radius: 20%;">
-        <div class="advertise-aware-block">
-            <!-- Outdated/Disabled now block -->
+        <div class="advertise-aware-block" style="width: auto;text-align: center;padding: 15px;">
+            <!-- Banner place -->
         </div>
         <div class="search-aware-block-global" style="margin-bottom: -8em;transition: margin-bottom 0.8s;">
             <div class="wrapper">
