--- a/my_web/templates/my_web/base.html
+++ b/my_web/templates/my_web/base.html
@@ -498,7 +498,7 @@
         </a>
         <div class="header_content">
             <a href="{% url 'index_page' %}">
-                <label class="header_title" style="font-family: 'Pacifico', cursive;">{% block title_header %}{% endblock %}</label>
+                <label class="header_title" style="font-family: 'Pacifico', cursive;user-select: none;">{% block title_header %}{% endblock %}</label>
             </a>
         </div>
         <div class="dropdowncustom1">
