update ad system

--- a/my_web/templates/my_web/base.html
+++ b/my_web/templates/my_web/base.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<html lang="en">
+<html lang="en" style="scroll-behavior: smooth;">
     <head>
         <!-- Meta tags -->
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
