hotfix (banner position)

--- a/my_web/templates/my_web/index.html
+++ b/my_web/templates/my_web/index.html
@@ -26,7 +26,7 @@ AWARE
         <div class="advertise-aware-block" style="width: auto;text-align: center;padding: 15px;transition: margin-top 1s;">
             <a href="">
                 <img class="banner_ad_aware" done="no" onerror="BannerError(this);"
-                     style="transition: width 1s;width: 95%;display: none;margin-top: 1%;max-width: 95%;min-width: 40%;margin-right: 0.9em;height: auto;-webkit-appearance: none;border-radius: 0.5em;padding: 0;text-align: left;padding-bottom: 1px;box-shadow: 0 4px 15px 0 rgb(0 0 0 / 40%);">
+                     style="transition: width 1s;width: 95%;display: none;margin-top: 1%;max-width: 95%;min-width: 40%;height: auto;-webkit-appearance: none;border-radius: 0.5em;padding: 0;text-align: left;padding-bottom: 1px;box-shadow: 0 4px 15px 0 rgb(0 0 0 / 40%);">
             </a>
         </div>
         <div class="search-aware-block-global" style="margin-bottom: -8em;transition: margin-bottom 0.8s;">
