--- a/my_web/templates/my_web/base.html
+++ b/my_web/templates/my_web/base.html
@@ -43,8 +43,7 @@
         <link href="{% static 'my_web/css/main_page.css' %}" rel="stylesheet" crossorigin="anonymous" />
 
         {# Fonts #}
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Pacifico&display=swap&family=Josefin+Sans&display=swap&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+        <link href="{% static 'my_web/css/fonts_settings.css' %}" rel="stylesheet" crossorigin="anonymous" />
 
         <title>{% block title %}{% endblock %}</title>
     </head>
