--- a/my_web/static/my_web/css/main_page.css
+++ b/my_web/static/my_web/css/main_page.css
@@ -297,7 +297,7 @@
         font-weight: bold;
         padding: 8px 15px 8px 14px;
         text-shadow: 0 1px 0 rgb(255 255 255 / 50%);
-        background-color: #fcf8e3;
+        background-color: #d8d8d8;
         white-space: nowrap;
     }
 
