--- a/my_web/templates/my_web/index.html
+++ b/my_web/templates/my_web/index.html
@@ -40,7 +40,7 @@ AWARE
                         <i class="spinner-border spinner_search_load_aware" style="visibility: hidden;"></i>
                         <i class="fas fa-search icon_search_load_aware_one" style="visibility: hidden;" title="Поиск"></i>
                     </div>
-                    <div class="clear_aware_search_string" style="visibility: hidden;transition: margin-right 0.6s;margin-right: 40px;top: 0.8em;position: absolute;right: 0px;text-align: center;line-height: 55px;font-size: 20px;color: #202124;cursor: pointer;">
+                    <div class="clear_aware_search_string" style="visibility: hidden;transition: margin-right 0.6s;margin-right: 2.3em;top: 0.8em;position: absolute;right: 0px;text-align: center;line-height: 55px;font-size: 20px;color: #202124;cursor: pointer;">
                         <i class="fas fa-times" title="Очистить строку"></i>
                     </div>
                 </div>
