--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -105,12 +105,12 @@
         <div class="col-12 col-lg-12 padding-block-center-box">
             <div class="user box aos-init aos-animate" data-aos="fade-up">
                 <div style="float: left;">
-                    <label class="username"><a href="{% url 'news_page' %}">
-                        Новости от AWARE</a>
+                    <label class="username">
+                        Новости от AWARE
                     </label><br>
                     <label class="city">
                         <i>
-                            Подборка новостей на сегодня от AWARE
+                            Эта функция сейчас недоступна, простите.
                         </i>
                     </label>
                 </div>
