update quote and fact block

--- a/my_web/templates/my_web/index.html
+++ b/my_web/templates/my_web/index.html
@@ -80,7 +80,7 @@ AWARE
                             <div class="user box aos-init aos-animate" data-aos="fade-up">
                                 <div style="float: left;">
                                     <label class="username">Случайная цитата</label><br>
-                                    <label class="city"><i>„{{ add_.text }}“</i><br><br><b>{{ add_.author }}</b></label><br>
+                                    <label class="city"><i>„{{ add_.text }}“</i><br><br><b>{{ add_.author }}</b></label>
                                 </div>
                             </div>
                         </div>
@@ -89,7 +89,7 @@ AWARE
                             <div class="user box aos-init aos-animate" data-aos="fade-up">
                                 <div style="float: left;">
                                     <label class="username">Случайный факт</label><br>
-                                    <label class="city"><i>{{ add_.text }}</i><br></label><br><br>
+                                    <label class="city"><i>{{ add_.text }}</i><br></label>
                                 </div>
                             </div>
                         </div>
