--- a/my_web/templates/my_web/index.html
+++ b/my_web/templates/my_web/index.html
@@ -106,17 +106,11 @@ AWARE
                                         class="news_search_button_aware_index_block"
                                 >Искать новость</u>
                                 <br/><br/>
-                                <i>
-                                    {{ add_.1 }}
-                                </i>
+                                <i>{{ add_.1 }}</i>
                                 <br/><br/>
-                                <b>
-                                    Источник - <a href="{{ add_.4 }}" target="_blank">{{ add_.2 }}</a>
-                                </b>
-                                <br>
-                                <i>
-                                    <u>Опубликовано {{ add_.3 }} (UTC)</u>
-                                </i>
+                                <b>Источник - <a href="{{ add_.4 }}" target="_blank">{{ add_.2 }}</a></b>
+                                <br/>
+                                <i><u>Опубликовано {{ add_.3 }} (UTC)</u></i>
                             </label>
                         </div>
                     </div>
