--- a/my_web/templates/my_web/index.html
+++ b/my_web/templates/my_web/index.html
@@ -118,7 +118,7 @@ AWARE
             {% endif %}
         </div>
         <div style="margin: auto;">
-            <p class="no-more-results-text" style="color: #828282;font-size: 14px;visibility: hidden;text-align: center;">Больше результатов нет</p>
+            <p class="no-more-results-text" style="color: #828282;transition: margin-bottom 1s;font-size: 14px;visibility: hidden;text-align: center;">Больше результатов нет</p>
         </div>
         <button style="margin:0 auto;display:block;background-color:#121213;visibility: hidden;margin-bottom: 5%;" class="btn btn-dark load-more-end-butt-search-array">Загрузить еще&nbsp;<span class="spinner-border spinner-border-sm" aria-hidden="true"></span></button>
     </div>
