--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -368,13 +368,15 @@
                             </label><br>
                             <label id="{{ 32|get_random_string }}" class="city">
                                 {% if el.1.thumb and not el.1.youtube_id %}
-                                    <img
-                                            id="{{ 32|get_random_string }}"
-                                            src="{% url 'imageproxy' %}?data={{ el.1.thumb|link_encrypt_img }}&video_mode=1&token={{ token_image_proxy }}&sign={{ user_address_original|sign_address_encrypt }}"
-                                            onerror="imgError(this);"
-                                            style="margin-top: 1%;max-width: 32%;min-width: 25%;margin-right: 0.9em;height: auto;-webkit-appearance: none;border-radius: 0.5em;padding: 0;text-align: left;padding-bottom: 1px;box-shadow: 0 4px 15px 0 rgb(0 0 0 / 40%);"
-                                            alt="Изображения предварительного просмотра"
-                                    >
+                                    <a id="{{ 32|get_random_string }}" target="_blank" href="{{ el.1.link }}">
+                                        <img
+                                                id="{{ 32|get_random_string }}"
+                                                src="{% url 'imageproxy' %}?data={{ el.1.thumb|link_encrypt_img }}&video_mode=1&token={{ token_image_proxy }}&sign={{ user_address_original|sign_address_encrypt }}"
+                                                onerror="imgError(this);"
+                                                style="margin-top: 1%;max-width: 32%;min-width: 25%;margin-right: 0.9em;height: auto;-webkit-appearance: none;border-radius: 0.5em;padding: 0;text-align: left;padding-bottom: 1px;box-shadow: 0 4px 15px 0 rgb(0 0 0 / 40%);"
+                                                alt="Изображения предварительного просмотра"
+                                        >
+                                    </a>
                                 {% elif el.1.youtube_id %}
                                     <div class="view-container-youtube-video-aware" id="{{ 32|get_random_string }}">
                                         <img
